--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
               district: document.getElementById('districts').value,
               ageLimits: [document.getElementById('age45').checked, document.getElementById('age18').checked]
             }))
+            alert('you will get notification')
           })
         });
       }
